--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
     <title>Vite App</title>
   </head>
   <body>
-    <section class="sec_first page"></section>
+    <section class="sec_first page">
+      <header>
+        <img src="./img/image1.png" class="metaLogo">
+        <img src="./img/Group15.png" class="burger">
+      </header>
+      <div class="hero_mob1">
+        <h1>A world beyond hardware limitations</h1>
+        <p>The world's first decentralized, real-time cloud rendering network</p>
+        <button>Join our Community!</button>
+      </div>
+      <img src="" alt="">
+    </section>
     <section class="sec_second page"></section>
     <section class="sec_third page"></section>
     <section class="sec_fourth page"></section>
