--- a/index.html
+++ b/index.html
@@ -8,21 +8,38 @@
     <title>Vite App</title>
   </head>
   <body>
+    <header>
+      <img src="./img/image1.png" class="metaLogo">
+      <img src="./img/Group15.png" class="burger">
+    </header>
     <section class="sec_first page">
-      <header>
-        <img src="./img/image1.png" class="metaLogo">
-        <img src="./img/Group15.png" class="burger">
-      </header>
       <div class="hero_mob1">
         <h1>A world beyond hardware limitations</h1>
         <p>The world's first decentralized, real-time cloud rendering network</p>
         <button>Join our Community!</button>
       </div>
-      <img src="" alt="">
+      <img src="./img/Frame6.svg" class="scrollDown">
     </section>
-    <section class="sec_second page"></section>
-    <section class="sec_third page"></section>
-    <section class="sec_fourth page"></section>
+    <section class="sec_second page">
+      <div class="hero_mob1">
+      <h1>There are <span>three times as many</span> smartphones in the world as PCs</h1>
+      <div class="box">
+        <h1>1.3B+</h1>
+        <p>People in Asia have a smart phone and don’t have a PC</p>
+      </div>
+      <div class="box">
+        <h1>800M+</h1>
+        <p>People in Africa have a smart phone and don’t have a PC</p>
+      </div>
+    </div>
+    </section>
+    <section class="sec_third page">
+      <h2><span> As a result of their hardware,</span> almost 3 Billion gamers can’t access AAA gaming content</h2>
+    </section>
+    <section class="sec_fourth page">
+      <h2>Unlock billions of gamers worldwide <span>with M1 Network</span></h2>
+      <button>Connect your game to M1 Network</button>
+    </section>
     <section class="sec_fifth page"></section>
   </body>
 </html>
